@@ -3,6 +3,7 @@
 <b>0.9.6</b>
 <ul>
 <li>added in basic webserver authentication mechanism for v1.1.1 libraries</li>
+<li>switched the position of Commands page and Flags Page</li>
 </ul>
 <br>
 <b>0.9.5</b>
